--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </main>
 
   <footer>
-    <p>Created by YOUR NAME | Group XYZ | JS DOM Assignment #6</p>
+    <p>Created by Aizhamal</p>
   </footer>
 
   <script src="script.js"></script>
